<resources>
    <string name="app_name">Map Tracker</string>
    <string name="app_name_vn">Map Tracker</string>

    <string name="link_gg_drive"><![CDATA[https://drive.google.com/uc?export=download&id=1femuL17MUTz7t0yqUkMWB5yCea1W6kqI]]></string><!--no need to edit this-->
    <string name="link_cover"><![CDATA[https://live.staticflickr.com/4607/25921024848_3961c17c66_b.jpg]]></string>

    <string name="google_maps_key">AIzaSyBIPIyBbvDxUHPyEi9Qy-phu9VuOzy7iUI</string>
    <string name="str_b">ca-app-pub-3165963943681013/2660251425</string>
    <string name="str_f">ca-app-pub-3165963943681013/7724875845</string>
    <string name="str_reward">ca-app-pub-3165963943681013/4049354711</string>
    <string name="str_app_id">ca-app-pub-3165963943681013~3973333090</string>

    <string name="deny">Deny</string>
    <string name="yes">Yes</string>
    <string name="setting">Setting</string>
    <string name="need_permisson">Need permission</string>
    <string name="need_permisson_to_use_app">Need permission to use this app.</string>
    <string name="app_is_not_ready">The app is temporarily unavailable, please try again later.</string>
    <string name="check_ur_connection">Please check your connection.</string>
    <string name="warning">Warning</string>
    <string name="press_again_to_exit">Press again to exit the application.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="rate_app">Rate app</string>
    <string name="more_app">More apps</string>
    <string name="facebook_fanpage">Facebook fanpage</string>
    <string name="share_app">Share</string>
    <string name="gallery">Gallery</string>
    <string name="home">Home</string>
    <string name="exit">Exit</string>
    <string name="try_again">Try again</string>
    <string name="right_drawer">Right Drawer</string>
    <string name="no_data">No data</string>
    <string name="cancel">Cancel</string>
    <string name="distance_km">distance (km)</string>
    <string name="speed_km_h">avg speed (km/h)</string>
    <string name="n_a">N/A</string>
    <string name="stop">Stop</string>
    <string name="continue_">Continue</string>
    <string name="no_0">0</string>
    <string name="cannot_save_map">Cannot save map to gallery, please try again later</string>
    <string name="saved">Saved</string>
</resources>
