<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin_medium"
    android:layout_marginTop="@dimen/margin_small"
    android:layout_marginEnd="@dimen/margin_medium"
    android:layout_marginBottom="@dimen/margin_small"
    app:cardCornerRadius="@dimen/round_medium"
    app:cardElevation="@dimen/w_3"
    app:cardUseCompatPadding="true">

    <com.views.layout.squarelayout.LSquareFrameLayout
        android:id="@+id/rootView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?selectableItemBackground">

        <!--<ImageView
            android:id="@+id/ivMap"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            tools:src="@drawable/ic_launcher_playstore" />-->

        <com.views.imageview.kenburnview.LKenBurnsView
            android:id="@+id/ivMap"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/black65"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/padding_medium">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvDistance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/no_0"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txt_25"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/distance_km"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_medium"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvAvgSpeed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/no_0"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txt_25"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/speed_km_h"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_medium"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTimer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/n_a"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_medium"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </com.views.layout.squarelayout.LSquareFrameLayout>
</androidx.cardview.widget.CardView>
